# pico-smd-controller

./: .gitignore  CMakeLists.txt  README  README.freebsd  README.md  _rebuild.sh  adler32.c  adler32.h  b64.c  b64.h  base.c  base.h  base64.c  base64.h  build.sh  clocked_read.c  clocked_read.h  clocked_read.pio  command_parser.c  command_parser.h  config.h  controller.c  controller_protocol.h  cr8044read.c  cr8044read.h  cr8044read.pio  dbgclk.pio  drive.h  flash.sh  log.c  log.h  loopback_test.c  loopback_test.h  loopback_test.pio  loopback_test_generate_data.h  loopback_verify.c  low_level_controller.pio  lwipopts.h  pin_config.h  print_pin_config_html.c  (+11 more)
doc/: TODO  pin_config.html
frontend/: Makefile  spcfront.cpp
frontend_graphical/: .gitignore  Makefile  spcfront.cpp
misc/: bitdump.c  bits.h  cr80_extract.c  gifhack.sh  loopback_verify.c  prettify_telemetry_log.py  print_pin_config_html.c  visualize_nrz.c
